[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For experimental dev.

[workspace]
resolver = "2"
members = [
    # -- Application Libraries
    "crates/libs/lib-utils", # e.g., base64, time.
    "crates/libs/lib-rpc",   # e.g., app rpc handlers (using rpc-router crate)
    "crates/libs/lib-auth",  # e.g., for pwd, token.
    "crates/libs/lib-core",  # e.g., model, ctx, config.

    # -- Application Services
    "crates/services/web-server",

    # -- Tools
    "crates/tools/gen-key",    
]

# NOTE: Only the crates that are utilized in two or more sub-crates and benefit from global management
#       are handled in workspace.dependencies. Other strategies may also be valid.
[workspace.dependencies]
# -- Serde
serde_with = {version = "3", features = ["time_0_3"] }
# -- Data
# Note: we lock modql version during rcs
modql = { version = "=0.4.0-rc.6", features = ["with-sea-query"]}
# -- JSON-RPC
# Lock to specific version during 0.1.x
rpc-router = { version = "=0.1.3" } 
# -- Others
# NOTE: time is set as `<0.3.35` to match sea-query-binder version 0.6.0-rc.2 (see https://github.com/SeaQL/sea-query/issues/772)
#       will set back to `0.3` as soon as sea-query-binder 0.6.0-rc is fix
time = {version = "<0.3.35", features = ["formatting", "parsing", "serde"]}
derive_more = {version = "1.0.0-beta", features = ["from", "display"] }
