[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
# -- App Crates
lib-base = { path = "../../libs/base"}
# -- Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = {version = "3", features = ["time_0_3"]}
# -- Hashing
hmac = "0.12"
sha2 = "0.10"
# -- Data
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid"] }
sea-query = "0.30"
sea-query-binder = { version = "0.5", features = ["sqlx-postgres", "with-uuid" ] }
sqlb = "0.5.0-alpha.1"
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Others
uuid = {version = "1", features = ["v4","fast-rng",]}


[dev-dependencies]
anyhow = "1"
rand = "0.8"
serial_test = "2"
httpc-test = "0.1.1"