[package]
name = "lib-auth"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
# -- Json
serde = { version = "1", features = ["derive"] }
# -- Hashing (pwd-scheme01 & Token)
hmac = "0.12"
sha2 = "0.10"
# -- Hashing (pwd-scheme02)
argon2 = {version="0.5", features=["std"]}
# -- Others
uuid = {version = "1", features = ["v4","fast-rng",]}
lazy-regex = "3"

[dev-dependencies]
anyhow = "1"
