[package]
name = "lib-rpc-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- App Libs
lib-core = { path = "../../libs/lib-core", features = ["with-rpc"] }
lib-rpc-core = { path = "../../libs/lib-rpc-core"}

# -- Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { workspace = true }
# -- Data
modql = { workspace = true }
# -- Rpc
rpc-router = { workspace = true }
# -- Others
paste = "1"
derive_more = { workspace = true }

[lints]
workspace = true